--- a/index.html
+++ b/index.html
@@ -1,107 +1,436 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Untitled</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+    <script src="js/vue.min.js" language="JavaScript"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/html2canvas.min.js" async="async"></script>
+    <style>
+      img {
+        border-radius: 10px;
+      }
+    </style>
+  </head>
 
-<html lang="zh-CN">
-<title>MyHome</title>
-<meta charset="utf-8">
-<meta content="width=device-width,initial-scale=1,maximum-scale=1"name=viewport>
-<meta content="个人维护的系统首页，具备个人的定制化。" name="description">
-<meta content="个人,首页，浏览器，" name="keywords">
-<link href="style.css"rel=stylesheet>
-<body onload="geteveryday();">
-<div id="Date-Time">
-    <span id="hms"></span><br/>
-    <span id='ymd'></span>
-</div>
+  <body class="is-preload">
+    <!-- Loader -->
+    <link rel="stylesheet" href="assets/css/loader.css" />
+    <div class="loader">
+      <div class="container">
+        <h1>🍊</h1>
+        <p>摇匀</p>
+        <p>再喝</p>
+      </div>
+    </div>
 
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <section id="main">
+        <!-- Screenshot Button -->
+        <span
+          style="
+            display: flex;
+            position: fixed;
+            top: 2em;
+            right: 2em;
+            opacity: 0.65;
+            font-size: 0.8em;
+          "
+          v-show="backButton"
+          ><button class="button small" @click="screenShot" id="screenshot">
+            保存网页截图
+          </button></span
+        >
 
-<div class="input-group">
-    <input name="text" type="text" id="text" value="" placeholder="学海无涯" autofocus="autofocus" />
-    <button class="btn-primary" id="click" onclick="baidu()">搜一下</button>
-</div>
+        <!-- Welcome Message and Contacts -->
+        <header v-show="Contacts">
+          <span class="avatar"
+            ><img
+              src="images/avatar.jpg"
+              alt=""
+              style="width: 122px; height: 122px"
+          /></span>
+          <h1>Untitled</h1>
+          <transition-group name="fade">
+            <div v-show="defaults" key="text">
+              <p>Lorem</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore facere accusamus quae nesciunt at fuga dicta vitae
+                quidem reiciendis. Quos blanditiis corporis vel iusto
+                reprehenderit ratione distinctio fugiat quae sed.
+              </p>
+              <button
+                class="button small fit"
+                @click="showAbout"
+                v-bind:disabled="onTransition==1"
+              >
+                Click!
+              </button>
+            </div>
+            <div
+              v-for="item in contacts"
+              v-if="item.show"
+              key="item.name"
+              v-html="item.content"
+            ></div>
+            <button
+              class="button small"
+              key="button"
+              @click="hideContact(true)"
+              style="opacity: 0.55"
+              v-show="backButton"
+            >
+              返回
+            </button>
+          </transition-group>
+        </header>
+        <hr />
+        <footer v-show="Contacts">
+          <ul class="icons">
+            <li v-for="item in contacts">
+              <a @click="showContact(item.name)" :class="item.icon"
+                >{{item.desc}}</a
+              >
+            </li>
+          </ul>
+        </footer>
 
-<table class="table">
-    <tbody>
-    <tr>
-        <td><span class="trhead">生活</span></td>
-        <td><a href="https://www.bilibili.com/" class="trbody" target="_blank">Bilibili</a></td>
-        <td><a href="https://www.douyu.com/" class="trbody" target="_blank">斗鱼</a></td>
-    </tr>
-    <tr>
-        <td><span class="trhead">工作</span></td>
-        <td><a href="https://www.iconfont.cn/" class="trbody" target="_blank">图标库</a></td>
-        <td><a href="https://www.pmdaniu.com/explore" class="trbody" target="_blank">产品大牛</a></td>
-        <td><a href="https://www.axure.com.cn/" class="trbody" target="_blank">Axure中文网</a></td>
-    </tr>
-    <tr>
-        <td><span class="trhead">云盘</span></td>
-    </tr>
-    <tr>
-        <td><span class="trhead">破解</span></td>
-        <td><a href="https://www.ghxi.com/" class="trbody" target="_blank">果核</a></td>
-    </tr>
-    </tbody>
-</table>
-<div id="everyday">愿幸福每一天</div>
-<div id="jinrishici-sentence">愿幸福每一天</div>
-<!-- <button  onclick="geteveryday()">每日一语</button> -->
-</body>
+        <!-- Page container -->
+        <header v-show="info">
+          <transition-group name="fade">
+            <h1 key="title">{{ title }}</h1>
+            <p key="text" v-for="text in texts">{{ text }}</p>
+            <div v-html="html" key="html"></div>
+            <img
+              v-bind:src="img"
+              key="img"
+              style="width: 95%; height: auto"
+              v-for="img in imgs"
+            />
+            <div key="buttons">
+              <button
+                class="button small"
+                v-bind:disabled="(nowPage < startPage || onTransition==1)"
+                @click="navigate(-1)"
+              >
+                上一页
+              </button>
+              <button
+                class="button small"
+                v-bind:disabled="(nowPage >= endPage - 2 || onTransition==1)"
+                @click="navigate(1)"
+              >
+                下一页
+              </button>
+            </div>
+            <hr key="br" />
+            <button
+              @click="returnToContact"
+              key="button"
+              class="button fit"
+              v-bind:disabled="onTransition==1"
+            >
+              返回
+            </button>
+          </transition-group>
+        </header>
+      </section>
 
-<!-- 免费的调用每日一语的js -->
-<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
-<script type="text/javascript">
-    function startTime() {
-        var ymd = document.getElementById("ymd");
-        var hms = document.getElementById("hms");
-        var today = new Array('星期日','星期一','星期二','星期三','星期四','星期五','星期六');
-        var date = new Date();
-        var year = date.getFullYear(); //当前年份
-        var month = date.getMonth(); //当前月份
-        var data = date.getDate(); //天
-        var week = today[date.getDay()];//星期
-        var hours = date.getHours(); //小时
-        var minute = date.getMinutes(); //分
-        var second = date.getSeconds(); //秒
-        var data = year + "年" + checkTime((month + 1)) + "月" + checkTime(data)+"日"+"&emsp;"+week;
-        var time = checkTime(hours) + ":" + checkTime(minute) + ":" + checkTime(second);
-        ymd.innerHTML = data;
-        hms.innerHTML = time;
-        setTimeout('startTime()', 1000); //每一秒中重新加载startTime()方法
-    }
-    startTime();
-    //补位 当某个字段不是两位数时补0
-    function checkTime(str) {
-        var num;
-        str >= 10 ? num = str : num = "0" + str;
-        return num;
-    }
+      <!-- Footer -->
+      <footer id="footer"></footer>
+    </div>
 
-    //调用百度查询
-    var input = document.getElementById("text");
-    function baidu(){
-        var url="http://www.baidu.com/s?wd="+input.value;
-        window.open(url);
-    }
+    <!-- Scripts -->
+    <script>
+      if ("addEventListener" in window) {
+        window.addEventListener("load", function () {
+          document.body.className = document.body.className.replace(
+            /\bis-preload\b/,
+            ""
+          );
+        });
+        document.body.className += navigator.userAgent.match(/(MSIE|rv:11\.0)/)
+          ? " is-ie"
+          : "";
+      }
+    </script>
+    <!-- Vuejs -->
+    <script language="javascript">
+      var mainsec = new Vue({
+        el: "#main",
+        data: {
+          title: "", // The title of one page
+          html: "", // HTML text of one page
+          texts: [], // Pure texts of one page
+          imgs: [], // Image url of a page's images
 
-    //回车触发查询
-    input.addEventListener("keyup", function(event) {
-        event.preventDefault();
-        if (event.keyCode === 13) {
-            document.getElementById("click").onclick();
-        }
-    });
+          startPage: 1, // First page of the website
+          endPage: 3, // The last page of the website
 
-    function geteveryday(){
-        var httpRequest = new XMLHttpRequest();//第一步：建立所需的对象
-        httpRequest.open('GET', 'http://api.tianapi.com/txapi/everyday/index?key=9bd6b8084ba2184e354bebc6365d80dd', true);//第二步：打开连接  将请求参数写在url中  ps:"./Ptest.php?name=test&nameone=testone"
-        httpRequest.send();//第三步：发送请求  将请求参数写在URL中
-        /**
-         * 获取数据后的处理程序
-         */
-        httpRequest.onreadystatechange = function () {
-            var json = JSON.parse(httpRequest.responseText);//获取到json字符串，还需解析
-            console.log(json.code);
-            if(json.code=="200"){
-                document.getElementById("everyday").innerHTML=json.newslist[0].note;
+          defaults: 1, // Show welcome message
+          Contacts: 1, // Detect if to show contacts
+          info: 0, // If to show designed pages
+          deg: 0, // Main section rotate deg
+
+          backButton: false,
+
+          /*          Change things below this line               */
+          //Contact info
+          /**
+           * 有关下方icon的优化
+           * 因下方icon可以挂上用户自己的站点，所以做了如下修改
+           * jump为true，会直接跳转链接，链接为用户自定义的content字段
+           * jump为false，则是与原来一样。
+           */
+          contacts: [
+            {
+              name: "Wechat",
+              icon: "icon brands fa-weixin",
+              desc: "微信",
+              content: "<img src='images/demoQR.png' class='qr' />",
+              show: false,
+              jump: false,
+            },
+            {
+              name: "QQ",
+              icon: "icon brands fa-qq",
+              desc: "QQ",
+              content:
+                "<img src='images/demoQR.png' class='qr' /><h2>QQ:XXXXXX</h2>",
+              show: false,
+              jump: false,
+            },
+            {
+              name: "Github",
+              icon: "icon brands fa-github",
+              desc: "Github",
+              content: "https://github.com/Jiaocz/Personal-page",
+              show: false,
+              jump: true,
+            },
+          ],
+
+          //Pages content
+          page: [
+            {
+              title: "Page 1",
+              texts: [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore facere accusamus quae nesciunt at fuga dicta vitae quidem reiciendis. Quos blanditiis corporis vel iusto reprehenderit ratione distinctio fugiat quae sed.",
+              ],
+              html: "",
+              imgs: ["images/bg.jpg"],
+            },
+            {
+              title: "Page 2",
+              texts: ["Some text", "And some text"],
+              html: "<h2>HTML Support</h2>",
+              imgs: [""],
+            },
+            {
+              title: "Page 3",
+              texts: ["Multi images"],
+              imgs: ["images/bg.jpg", "images/demoQR.png"],
+              html: "",
+            },
+            {
+              title: "Page 4",
+              texts: ["Another Demo"],
+              html: '<a onclick="todonate()" style="color:#fff; background-color:#f0a1a8; border-radius: 0.3em; padding: 0.2em; cursor: pointer;"><<u>Donate!</u>></a><br /><p style="color:#ccc; font-size:0.7em;">Last updated: Apr. 14, 2021<p>',
+              imgs: [""],
+            },
+            {
+              title: "Eastern egg page!",
+              texts: ["Can only access with ?page=#"],
+              html: "<a href='https://github.com/Jiaocz/Personal-page' target='_blank'>Origin project</a>",
+            },
+          ],
+          /*            Change ends here                 */
+
+          nowPage: 0, // Pointer to current page
+          onTransition: 0, //If the transition animation is on
+        },
+        methods: {
+          showContact: function (name) {
+            let num = 0;
+            for (let i = 0; i < this.contacts.length; i++) {
+              if (this.contacts[i].name == name) {
+                num = i;
+                break;
+              }
             }
-        };
-    }
-</script>
+            if (this.contacts[num].jump == true) {
+              window.open(this.contacts[num].content);
+              return;
+            }
+            this.hideContact(false);
+            this.defaults = 0;
+            clearTimeout(this.timer);
+            this.timer = setTimeout(() => {
+              this.contacts[num].show = true;
+              this.backButton = true;
+            }, 500);
+          },
+          hideContact: function (neededDefault = true) {
+            for (i = 0; i < this.contacts.length; i++) {
+              this.contacts[i].show = false;
+            }
+            clearTimeout(this.timer);
+            if (neededDefault == true) {
+              this.backButton = false;
+              this.timer = setTimeout(() => {
+                this.defaults = 1;
+              }, 500);
+            }
+          },
+          showAbout: function () {
+            this.rotateCard(-360, 1, "Y");
+
+            var that = this;
+            setTimeout(function () {
+              that.info = 1;
+              that.Contacts = 0;
+            }, 400);
+          },
+          returnToContact: function () {
+            this.rotateCard(360, 1, "Y");
+            var that = this;
+            setTimeout(function () {
+              that.info = 0;
+              that.Contacts = 1;
+            }, 400);
+          },
+          rotateCard: function (deg, time, axis) {
+            this.onTransition = 1;
+            this.deg += deg;
+            var ele = document.getElementById("main");
+            ele.style.transition = "transform " + time + "s 0s";
+            ele.style.transform = "rotate" + axis + "(" + this.deg + "deg)";
+            var that = this;
+            setTimeout(function () {
+              that.onTransition = 0;
+            }, time * 1000);
+          },
+          loadPage: function () {
+            this.title = this.page[this.nowPage].title;
+            this.texts = this.page[this.nowPage].texts;
+            this.html = this.page[this.nowPage].html;
+            this.imgs = this.page[this.nowPage].imgs;
+          },
+          navigate: function (m) {
+            if (m == 1) {
+              this.nowPage++;
+              this.rotateCard(-360, 1, "Y");
+              setTimeout("mainsec.loadPage()", 400);
+            }
+            if (m == -1) {
+              this.nowPage--;
+              this.rotateCard(+360, 1, "Y");
+              setTimeout("mainsec.loadPage()", 400);
+            }
+          },
+          screenShot: function () {
+            var button = document.getElementById("screenshot");
+            button.disabled = true;
+            button.innerHTML = "截图中…";
+            html2canvas(document.body).then((canvas) => {
+              var w = window.open();
+              w.document.title = "保存截图";
+              var i = w.document.createElement("img");
+              w.document.body.appendChild(i);
+              i.src = canvas.toDataURL("image/jpg");
+              w.alert("长按图片或直接保存图片即可");
+              button.innerHTML = "保存网页截图";
+              button.disabled = false;
+            });
+          },
+        },
+        mounted: function () {
+          this.loadPage();
+          this.startPage = 1;
+          this.endPage = this.page.length;
+        },
+      });
+    </script>
+    <style>
+      .fade-enter-active,
+      .fade-leave-active {
+        transition: all 0.5s;
+      }
+      .fade-enter,
+      .fade-leave-to {
+        opacity: 0;
+        transform: scale(0%, 0%);
+      }
+      .qr {
+        text-align: center;
+        width: 80%;
+        height: 80%;
+      }
+    </style>
+    <script>
+      let FirstTriggered = true;
+      function loaded() {
+        timeout = FirstTriggered ? 1200 : 0;
+        var page = getQueryVariable("page");
+        if (page >= mainsec.startPage && page <= mainsec.endPage && page) {
+          var m = mainsec;
+          mainsec.nowPage = page - 1;
+          setTimeout(function () {
+            m.rotateCard(-360, 1, "Y");
+            setTimeout(function () {
+              m.loadPage();
+              m.info = 1;
+              m.Contacts = 0;
+            }, 400);
+          }, timeout);
+        }
+        if (FirstTriggered) {
+          $("body").on("dblclick", "img", function () {
+            window.open(this.src);
+          });
+        }
+        if (
+          getQueryVariable("showContacts") ||
+          getQueryVariable("showcontacts")
+        ) {
+          var url;
+          var browser = navigator.userAgent.toLowerCase();
+          if (mainsec.info == 1) {
+            mainsec.returnToContact();
+          }
+          if (browser.match(/MicroMessenger/i) == "micromessenger") {
+            //微信浏览器
+            url = "https://u.wechat.com/EO3JtzoXctOZXiAG8tvYHuI";
+            setTimeout(function () {
+              mainsec.showContact("Wechat");
+            }, 1500);
+          } else if (
+            browser.indexOf(" qq") != -1 &&
+            browser.indexOf("mqqbrowser") != -1
+          ) {
+            //qq内置浏览器
+            url =
+              "https://qm.qq.com/cgi-bin/qm/qr?k=OZm0covTGqrELIwI0XKV6LxlKsCcLIsm";
+            setTimeout(function () {
+              mainsec.showContact("QQ");
+            }, 1500);
+          }
+        }
+
+        FirstTriggered = false;
+      }
+    </script>
+    <script src="js/common.js"></script>
+  </body>
+</html>
