--- a/index.html
+++ b/index.html
@@ -60,23 +60,26 @@
               alt=""
               style="width: 122px; height: 122px"
           /></span>
-          <h1>Untitled</h1>
+          <h1>Fmy 庄 Ly</h1>
           <transition-group name="fade">
             <div v-show="defaults" key="text">
-              <p>Lorem</p>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Inventore facere accusamus quae nesciunt at fuga dicta vitae
-                quidem reiciendis. Quos blanditiis corporis vel iusto
-                reprehenderit ratione distinctio fugiat quae sed.
+                Hello！我的朋友，被你发现了！
               </p>
+              <P>
+                如果你想了解更多的关于我......
+              </P>
               <button
                 class="button small fit"
                 @click="showAbout"
                 v-bind:disabled="onTransition==1"
               >
-                Click!
+                可以点击这里！
               </button>
+              <h4>
+                博客开业啦！确定不来康康嘛~
+              </h4>
+              <a href='https://www.cnblogs.com/' target='_blank'>https://www.cnblogs.com/</a>
             </div>
             <div
               v-for="item in contacts"
@@ -207,7 +210,7 @@
               icon: "icon brands fa-qq",
               desc: "QQ",
               content:
-                "<img src='images/demoQR.png' class='qr' /><h2>QQ:XXXXXX</h2>",
+                "<img src='images/demoQR.png' class='qr' /><h2>QQ:2897100227</h2>",
               show: false,
               jump: false,
             },
