--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
               imgs: ["images/by.jpg","images/hz.jpg"],
             },
             {
-              title: "Page 2",
-              texts: ["Some text", "And some text"],
-              html: "<h2>HTML Support</h2>",
-              imgs: [""],
+              title: "对生活充满激情的",
+              texts: ["我是班级内的班长","我是校学科竞赛部的干部" ,"我是一名共产党员","我在疫情时期积极抗疫"],
+              html: "<h4>Actively facing life</h4>",
+              imgs: ["images/ky1.jpg","images/ky2.jpg"],
             },
             {
-              title: "Page 3",
-              texts: ["Multi images"],
-              imgs: ["images/bg.jpg", "images/demoQR.png"],
+              title: "和团队开发的项目",
+              texts: ["这是我在2023年服务外包创新创业大赛中和团队一起开发的项目，是一个人脸识别系统，我们陆陆续续花了1个月的时间去开发它，但是因为经验的不足，它还是存在许多的问题，止步省赛。很可惜，但是很开心，我们收获的是经验，相信下次我们将会获得更远的结果。"],
+              imgs: ["images/fc1.jpg", "images/fc2.jpg","images/fc3.jpg","images/fc4.jpg"],
               html: "",
             },
             {
