--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
               html: "",
             },
             {
-              title: "Page 4",
-              texts: ["Another Demo"],
-              html: '<a onclick="todonate()" style="color:#fff; background-color:#f0a1a8; border-radius: 0.3em; padding: 0.2em; cursor: pointer;"><<u>Donate!</u>></a><br /><p style="color:#ccc; font-size:0.7em;">Last updated: Apr. 14, 2021<p>',
+              title: "恰烂钱~来啦~",
+              texts: [""],
+              html: '<a onclick="todonate()" style="color:#fff; background-color:#f0a1a8; border-radius: 0.3em; padding: 0.2em; cursor: pointer;"><<u>如果你觉得不错</u>></a><br /><p style="color:#ccc; font-size:0.7em;">Last updated: Sep. 03, 2023<p>',
               imgs: [""],
             },
             {
