--- a/donate.html
+++ b/donate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>钱钱钱</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +31,7 @@
 						<span style="display: flex; position: fixed; top: 2em; left: 2em; opacity: 0.65;" v-if="backButton"><button class="button small" onclick="toIndex()">&lt;返回</button></span>
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" style="width: 122px; height: 122px;" /></span>
-							<h1>Untitled</h1>
+							<h1>钱钱钱</h1>
 							<transition-group name="fade">
 								<div v-html="text" v-show="defaults" key="text"></div>
 								<div v-for="item in method" v-show="item.show" key="item.name" v-html="item.content"></div>
@@ -76,21 +76,21 @@
 								name:"Alipay",
 								icon:"icon brands fa-alipay",
 								desc:"支付宝",
-								content:"<img src=\"images/demoQR.png\" class=\"qr\" /><br /><h2><a href=\"alipayqr://platformapi/startapp?saId=10000007&qrcode=null\"><u>支付宝[点击即可打开]</u></a></h2>",
+								content:"\"<h2>我怎么可能那么不要脸~嘻嘻，但是你点到这了就还是谢谢你！！！爱你！！</h2>\"",
 								show: false
 							},
 							{
 								name:"Wechat",
 								icon:"icon brands fa-weixin",
 								desc:"微信支付",
-								content:"<img src=\"images/demoQR.png\" class=\"qr\" /><br /><h2>微信</h2>",
+								content:"\"<h2>我怎么可能那么不要脸~嘻嘻，但是你点到这了就还是谢谢你！！！爱你！！</h2>\"",
 								show:false
 							},
 							{
 								name:"QQ",
 								icon:"icon brands fa-qq",
 								desc:"QQ钱包",
-								content:"<img src=\"images/demoQR.png\" class=\"qr\" /><br /><h2>QQ钱包</h2>",
+								content:"\"<h2>我怎么可能那么不要脸~嘻嘻，但是你点到这了就还是谢谢你！！！爱你！！</h2>\"",
 								show:false
 							}
 						],
