--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
               html: "",
             },
             {
+              title: "自己获得的成就",
+              texts: ["我太懒了，真的，所以真没有参加太多可以排的上号的比赛，就一个蓝桥杯"],
+              imgs: ["images/bs.jpg"],
+              html: "",
+            },
+            {
               title: "恰烂钱~来啦~",
               texts: [""],
               html: '<a onclick="todonate()" style="color:#fff; background-color:#f0a1a8; border-radius: 0.3em; padding: 0.2em; cursor: pointer;"><<u>如果你觉得不错</u>></a><br /><p style="color:#ccc; font-size:0.7em;">Last updated: Sep. 03, 2023<p>',
